--- a/main.html
+++ b/main.html
@@ -10,9 +10,12 @@
   <body>
     <h1>Paul Walkers Hub </h1> <br><br>
     <center>
+      <div class="card">
+      <div class="container">
       <table>
       <tr>
         <td>Select Type Of Car : </td>
+      </tr><tr><td> </td></tr><tr>
         <td>
         <select name="sec">
         <option value="select car Type" selected> Select Car Type </option>
@@ -24,6 +27,8 @@
       </td>
       </tr>
     </table>
+</div>
+</div>
 </center>
   </body>
 </html>
