--- a/luxurious.html
+++ b/luxurious.html
@@ -3,23 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>Luxurious</title>
+<link rel="stylesheet" href="card.css">
   </head>
   <body>
     <h1> Luxurious Cars</h1>
     <center>
+<div class="card">
     <table>
       <tr>
-        <td><img src="images/320.jpg"width="400px" height="200px"></td> &nbsp;
-        <td><p>BMW 320D </p><br> 4000/- per day  </td>
-        <td><input type="button" value="Book" onclick="reg"> </td>
+        <td>
+<div class="container"><img src="images/320.jpg"width="400px" height="200px"></div></td>
+        <td><p>BMW 320D <br> 4000/- per day  <br><br>
+        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
+</table>
+</div>
+<div class="card">
+<table>
       <tr>
-        <td><img src="images/sclass.jpg" width="400px" height="200px"></td> &nbsp;
-        <td><p>S CLASSS BENZ</p><br> 1800/- per day  </td>
-        <td><input type="button" value="Book" onclick="reg"> </td>
+        <td>
+<div class="container"><img src="images/sclass.jpg" width="400px" height="200px"></div></td>
+        <td><p>S CLASSS BENZ<br> 1800/- per day <br><br>
+        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
     </table>
+</div>
     <center>
-
   </body>
 </html>
