--- a/suv.html
+++ b/suv.html
@@ -2,27 +2,43 @@
   <head>
     <meta charset="utf-8">
     <title>Suv</title>
+<link rel="stylesheet" href="card.css">
   </head>
   <body>
     <h1> Suv Cars</h1>
     <center>
+<div class="card">
     <table>
       <tr>
-        <td><img src="images/sc.jpg" width="400px" height="200px"</td> &nbsp;
-        <td><p> SCross</p><br> 1700/- per day  </td>
-        <td><input type="button" value="Book" onclick="reg"> </td>
+        <td>
+<div class="container"><img src="images/sc.jpg" width="400px" height="200px"</div></td>
+        <td><p> SCross<br> 1700/- per day <br><br>
+        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
+</table>
+</div>
+<br><br>
+<div class="card">
+<table>
       <tr>
-        <td><img src="images/creta.jpg" width="400px" height="200px"</td> &nbsp;
-        <td><p>Creta</p><br> 2000/- per day  </td>
-        <td><input type="button" value="Book" onclick="reg"> </td>
+        <td>
+<div class="container"><img src="images/creta.jpg" width="400px" height="200px"</div></td>
+        <td><p>Creta <br> 2000/- per day <br><br>
+        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
+</table>
+</div>
+<br><br>
+<div class="card">
+<table>
       <tr>
-        <td><img src="images/jeep.jpg" width="400px" height="200px"</td> &nbsp;
-        <td><p>Jeep Compass</p><br> 2200/- per day  </td>
-        <td><input type="button" value="Book" onclick="reg"> </td>
+        <td>
+<div class="container"><img src="images/jeep.jpg" width="400px" height="200px"</div></td>
+        <td><p>Jeep Compass<br> 2200/- per day <br><br>
+        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
     </table>
+</div>
     <center>
 
   </body>
