--- a/xuv.html
+++ b/xuv.html
@@ -2,28 +2,41 @@
   <head>
     <meta charset="utf-8">
     <title>Suv</title>
+<link rel="stylesheet" href="card.css">
   </head>
   <body>
     <h1> Xuv Cars</h1>
     <center>
+<div class="card">
     <table>
       <tr>
-        <td><img src="images/innova.jpg" width="400px" height="200px"</td> &nbsp;
-        <td><p> Innova Crysta</p><br> 2100/- per day  </td>
-        <td><input type="button" value="Book" onclick="reg"> </td>
+        <td>
+<div class="container"><img src="images/innova.jpg" width="400px" height="200px"</div></td>
+        <td><p> Innova Crysta<br> 2100/- per day <br><br>
+        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
+</table>
+</div><br><br>
+<div class="card">
+<table>
       <tr>
-        <td><img src="images/xuv.jpg" width="400px" height="200px"</td> &nbsp;
-        <td><p>Xuv 500</p><br> 2200/- per day  </td>
-        <td><input type="button" value="Book" onclick="reg"> </td>
+        <td>
+<div class="container"><img src="images/xuv.jpg" width="400px" height="200px"</div></td>
+        <td><p>Xuv 500<br> 2200/- per day <br><br>
+        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
+</table>
+</div><br><br>
+<div class="card">
+<table>
       <tr>
-        <td><img src="images/safari.jpg" width="400px" height="200px"</td> &nbsp;
-        <td><p>Safari</p><br> 2300/- per day  </td>
-        <td><input type="button" value="Book" onclick="reg"> </td>
+        <td>
+<div class="container"><img src="images/safari.jpg" width="400px" height="200px"</div></td>
+        <td><p>Safari<br> 2300/- per day <br><br>
+      <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
     </table>
+</div>
     <center>
-
   </body>
 </html>
