--- a/reg.html
+++ b/reg.html
@@ -3,16 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>REGISTER</title>
+<link rel="stylesheet" href="reg.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <center>
-    <h1> Upload your valid licence   </h1>
+    <h1> Upload your valid licence  </h1><br>
+<div class="card">
+<div class="container">
     <form action="upload.php" method="post" enctype="multipart/form-data">
-    Select image to upload:
-    <input type="file" name="fileToUpload" id="fileToUpload">
+    Select image to upload:<br><br><br>
+<i class="fa fa-upload"></i>&nbsp;&nbsp;&nbsp;
+    <input type="file" name="fileToUpload" id="fileToUpload"><br><br>
     <input type="submit" value="Upload Image" name="submit">
 </form>
-
+<br><br>
+</div></div>
     <center>
   </body>
 </html>
