--- a/log.html
+++ b/log.html
@@ -14,7 +14,7 @@
     Login : &nbsp; &nbsp; &nbsp;&nbsp;<input type="text" name="username" value="" id="user"><br><br>
 
     Password : <input type="password" name="pass" id="pass" ><br><br><br>
-    <input type="submit" name="login" value="Login" onclick="logn();">
+    <input type="button" name="login" value="Login" onclick="location.href='main.html'">
     <input type="button" name="signup" value="SignUp" onclick="location.href='signup.html'">
   </form>
     </center>
