--- a/luxurious.html
+++ b/luxurious.html
@@ -14,7 +14,7 @@
         <td>
 <div class="container"><img src="images/320.jpg"width="400px" height="200px"></div></td>
         <td><p>BMW 320D <br> 4000/- per day  <br><br>
-        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
+        <a href="js.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
 </table>
 </div>
@@ -24,7 +24,7 @@
         <td>
 <div class="container"><img src="images/sclass.jpg" width="400px" height="200px"></div></td>
         <td><p>S CLASSS BENZ<br> 1800/- per day <br><br>
-        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
+        <a href="js.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
     </table>
 </div>
