--- a/sedan.html
+++ b/sedan.html
@@ -3,27 +3,48 @@
   <head>
     <meta charset="utf-8">
     <title>sedan</title>
+<link rel="stylesheet" href="card.css">
   </head>
   <body>
     <h1> Sedan Cars</h1>
     <center>
+<div class="card">
     <table>
       <tr>
-        <td><img src="images/desire.jpg"width="400px" height="200px"></td> &nbsp;
-        <td><p>Swift Desire</p><br> 1600/- per day  </td>
-        <td><input type="button" value="Book" onclick="reg"> </td>
+<td>
+<div class="container">
+<img src="images/desire.jpg"width="400px" height="200px"></div></td>
+        <td><p>Swift Desire<br> 1600/- per day  <br><br>
+        <a href="js.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
-      <tr>
-        <td><img src="images/xcent.jpg" width="400px" height="200px"></td> &nbsp;
-        <td><p>Xcent</p><br> 1800/- per day  </td>
-        <td><input type="button" value="Book" onclick="reg"> </td>
+</table>
+</div>
+<br>
+<br>
+<div class="card">
+ <table>
+<tr>
+<td>
+<div class="container">
+<img src="images/xcent.jpg" width="400px" height="200px"></div></td>
+        <td><p>Xcent<br> 1800/- per day <br><br>
+        <a href="js.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
+</table>
+</div>
+<br>
+<br>
+<div class="card">
+<table>
       <tr>
-        <td><img src="images/rapid.jpg" width="400px" height="200px"></td> &nbsp;
-        <td><p>Rapid</p><br> 2000/- per day  </td>
-        <td><input type="button" value="Book" onclick="reg"> </td>
+<td>
+<div class="container">
+<img src="images/rapid.jpg" width="400px" height="200px"></div></td>
+        <td><p>Rapid<br>2000/- per day <br><br>
+        <a href="js.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
     </table>
+</div>
     <center>
 
   </body>
