--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,17 @@
   <title>Sign Up</title>
   <script src="signup.js">
   </script>
+<style media="screen">
+    body{
+font-family:"Arial Black", Gadget, sans-serif;
+background-image:url(".jpg");
+background-repeat:no-repeat;
+background-size:100%;
+margin:100px;
+}
+
+
+    </style>
 
 </head>
 <body>
