--- a/xuv.html
+++ b/xuv.html
@@ -13,7 +13,7 @@
         <td>
 <div class="container"><img src="images/innova.jpg" width="400px" height="200px"</div></td>
         <td><p> Innova Crysta<br> 2100/- per day <br><br>
-        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
+        <a href="js.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
 </table>
 </div><br><br>
@@ -23,7 +23,7 @@
         <td>
 <div class="container"><img src="images/xuv.jpg" width="400px" height="200px"</div></td>
         <td><p>Xuv 500<br> 2200/- per day <br><br>
-        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
+        <a href="js.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
 </table>
 </div><br><br>
@@ -33,7 +33,7 @@
         <td>
 <div class="container"><img src="images/safari.jpg" width="400px" height="200px"</div></td>
         <td><p>Safari<br> 2300/- per day <br><br>
-      <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
+      <a href="js.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
     </table>
 </div>
