--- a/suv.html
+++ b/suv.html
@@ -13,7 +13,7 @@
         <td>
 <div class="container"><img src="images/sc.jpg" width="400px" height="200px"</div></td>
         <td><p> SCross<br> 1700/- per day <br><br>
-        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
+        <a href="js.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
 </table>
 </div>
@@ -24,7 +24,7 @@
         <td>
 <div class="container"><img src="images/creta.jpg" width="400px" height="200px"</div></td>
         <td><p>Creta <br> 2000/- per day <br><br>
-        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
+        <a href="js.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
 </table>
 </div>
@@ -35,7 +35,7 @@
         <td>
 <div class="container"><img src="images/jeep.jpg" width="400px" height="200px"</div></td>
         <td><p>Jeep Compass<br> 2200/- per day <br><br>
-        <a href="reg.html"><input type="button" value="Book" class="button"></a> </td>
+        <a href="js.html"><input type="button" value="Book" class="button"></a> </td>
       </tr>
     </table>
 </div>
